--- a/hello-world.yml
+++ b/hello-world.yml
@@ -1,10 +1,14 @@
 name: Hello World
 
-on: 
-  push 
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   hello-job:
     runs-on: ubuntu-latest
-    steps: 
+
+    steps:
       - name: Echo text
         run: echo "Hello, world!"
